Bug 172031. Make CanvasFrame put back the block preferred size before incrementally reflowing its block, since the block needs that preferred size to incrementally reflow its absolute frames properly. r=karnaze,sr=kin